5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1585_2895.log
== TEST (2019-03-26 10:17:33) 
-- CODE:
quant=int(input('quantidade se jogos que deseja'))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quantidade*valor+frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(quantidade*valor+frete)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:15) 
-- CODE:
quant=int(input('quantidade se jogos que deseja'))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quantidade*valor+frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(quantidade*valor+frete)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:18:20) 
-- CODE:
quant=int(input('quantidade se jogos que deseja'))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quantidade*valor+frete)
-- EXECUTION TIME:
0.206645
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 5, in <module>
    print(quantidade*valor+frete)
NameError: name 'quantidade' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:23) 
-- CODE:
quant=int(input('quantidade se jogos que deseja'))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quantidade*valor+frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(quantidade*valor+frete)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:39) 
-- CODE:
quant=int(input('quantidade se jogos que deseja'))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quant*valor+frete)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:55) 
-- CODE:
quant=int(input('quantidade se jogos que deseja'))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quant*valor+frete)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:19:45) 
-- CODE:
quant=int(input('quantidade se jogos que deseja'))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quant*valor+frete)
-- EXECUTION TIME:
0.16407
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:56:23) 
-- CODE:
quant=int(input(' quantidade se jogos que deseja '))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quant*valor+frete)
-- EXECUTION TIME:
0.141373
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:56:42) 
-- CODE:
quant=int(input('quantidade se jogos que deseja '))
valor=float(input('valor de cada jogo'))
frete=float(input('valor do frete'))

print(quant*valor+frete)
-- EXECUTION TIME:
0.178059
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
